--- a/thin/static/css/websurv.css
+++ b/thin/static/css/websurv.css
@@ -1,24 +1,66 @@
+/*
 breadcrumb > li + li:before {
-    content: "\3E";
+  content: "\3E";
 }
-
-.LI{
-    float:left;
-    font-size:1.1em;
-    vertical-align:middle;
-    text-align:center;
-    line-height:50px;
-}
+*/
 
 .user_tag{
-    vertical-align:middle;
-    text-align:center;
-    line-height:50px;
-    font-size:1.1em;
-}
-      
+  vertical-align:middle;
+  text-align:center;
+  line-height:50px;
+  font-size:1.1em;
+}    
 
 .logo-image{
-    padding:10px;
-    float:left;
+  padding:10px;
+}
+
+.dropdown-inverse{
+  background-color: #222;
+  border-color: #080808;
+  &>li>a{
+    color: #999;
+    &:hover{
+      color: #fff;
+      background-color: #000;
+    }
+  }
+}
+
+.dropdown-inverse >li > a {
+  color: #999;
+}
+
+.dropdown-inverse > li > a:hover, .dropdown-inverse > li > a:focus {
+  color: white;
+  background-color: #428bca; /*$primary-color*/
+}
+
+.navbar-logo {
+  margin-top: -15px;
+}
+
+.logo {
+  vertical-align: bottom;
+  margin-right: 10px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #222;
+}
+
+footer .breadcrumb {
+  margin: 0;
+  background-color: #222;
+}
+
+.breadcrumb-bar li+li:before {
+    content: "|\00a0";
+}
+
+.copyright:after {
+  content: "\00a9"
 }
