--- a/thin/templates/thin/project_edit.html
+++ b/thin/templates/thin/project_edit.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<form method="post" action="">
-    {{ form }}
+<form method="post" action="{% url %}">
+  {{ form }}
 </form>
 
 {% endblock %}
