--- a/thin/templates/thin/dictionary_index.html
+++ b/thin/templates/thin/dictionary_index.html
@@ -1,13 +1,15 @@
 {% extends "thin/list.html" %}
 
 {% block content %}
-  <p>This is dictionary_index.html</p>
-  <ul>
-    {% for d in d_lst %}
-      <li><a href="/dictionaries/{{d.id}}/"> {{d.name}}</a> : <a href="/dictionaries/{{d.id}}/edit">Edit</a></li>
-<!-- Waiting on them to be created
-      <li><a href="{# url 'dictionary_detail' d.id #}"> {{d.name}} </a> : <a href "{# url 'dictionary_edit' d.id #}">Edit</a></li>
--->
-    {% endfor %}
+<p>This is dictionary_index.html</p>
+<ul>
+  {% for dict in dict_list %}
+  <li>
+    <a href="{% url 'dictionary_detail' dict.id %}">{{dict.name}}</a> :
+    <a href="{% url 'dictionary_edit' dict.id %}">Edit</a>
+  </li>
+  {% empty %}
+  <li>No dictionaries</li>
+  {% endfor %}
 </ul>
 {% endblock %}
