updated project views and templates based on class today

--- a/thin/templates/thin/project_detail.html
+++ b/thin/templates/thin/project_detail.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-{{project.name}} : <a href="/projects/{{project.id}}/edit">Edit </a></li>
+{{project.name}} : <a href="{% url 'project_edit' project.id %}">Edit </a></li>
 
 {% endblock %}
