Fixed some url stuff and views stuff

--- a/thin/templates/thin/project_edit.html
+++ b/thin/templates/thin/project_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method="post" action="{% url %}">
+<form method="post" action="{% url 'project_detail' project.id %}">
   {{ form }}
 </form>
 
