project stuff has add, edit and delete apparently working

--- a/thin/templates/thin/base-static-nav.html
+++ b/thin/templates/thin/base-static-nav.html
@@ -75,7 +75,7 @@
       <div class="container text-muted">
 	<ul class="pull-left breadcrumb breadcrumb-bar">
 	  <li><a href="#">Home</a></li>
-	  <li><a href="#">Project List</a></li>
+	  <li><a href="{% url "project_index"%}">Project List</a></li>
 	  <li><a href="#">Help</a></li>
 	</ul>
 	<ul class="pull-right breadcrumb">
