--- a/thin/templates/thin/base-static-nav.html
+++ b/thin/templates/thin/base-static-nav.html
@@ -59,11 +59,12 @@
       </ol>
 
       {% if messages %}
-      <ul class="messages">
+      <div class="messages">
 	{% for message in messages %}
-	<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+	<p{% if message.tags %} class="alert alert-{{ message.tags }} alert-dismissable"{% endif %}>{{ message }}</p>
 	{% endfor %}
-      </ul>
+      </div>
       {% endif %}
 
       <h1>Content</h1>
