--- a/thin/templates/thin/project_index.html
+++ b/thin/templates/thin/project_index.html
@@ -11,6 +11,6 @@
   </li>
   {% endfor %}
 </ul>
-<a href="{% url 'project_add' %}" class'btn btn-success'>Add </a>
+<a href="{% url 'project_add' %}" class="btn btn-primary">Add </a>
 
 {% endblock %}
