--- a/thin/templates/thin/survey_edit.html
+++ b/thin/templates/thin/survey_edit.html
@@ -1,5 +1,26 @@
-{% extends 'thin/base.html' %}
+{% extends "thin/base.html" %}
+
+{% load bootstrap %}
 
 {% block content %}
-<p>Future spot to edit the survey!</p>
+
+<div class='row'>
+
+  <form method="POST" action="{% url 'survey_delete' survey.id %} " class="pull-right">
+    {% csrf_token %}
+    <input type="submit" value="Delete" class="btn btn-danger"/>
+  </form>
+
+  <div class="col-md-4">
+
+    <form method="POST" action="">
+      {% csrf_token %}
+      {{ form|bootstrap }}
+      <input type="submit" value="Save Changes" class="btn btn-primary"/>
+    </form>
+
+  </div>
+</div>
+
+
 {% endblock %}
