Fixing things from merge.

--- a/thin/templates/thin/dictionary_index.html
+++ b/thin/templates/thin/dictionary_index.html
@@ -13,5 +13,6 @@
   <li>No dictionaries</li>
   {% endfor %}
 </ul>
-<a href="{% url 'dictionary_add' %}" class="btn btn-primary">Add</a>
+ {# TODO: make this work #}
+{# <a href="{% url 'dictionary_add' %}" class="btn btn-primary">Add</a> #}
 {% endblock %}
