--- a/thin/templates/thin/survey_edit.html
+++ b/thin/templates/thin/survey_edit.html
@@ -1,9 +1,13 @@
 {% extends 'thin/base.html' %}
 
+{% load bootstrap %}
+
 {% block content %}
 
 <form method="post" action="{% url 'survey_detail' survey.id %}">
-  {{ form }}
+  {% csrf_token %}
+  {{ form|bootstrap }}
+  <input type="submit" value="Save Changes" class='btn btn-primary'/>
 </form>
 
 {% endblock %}
