--- a/thin/templates/thin/dictionary_index.html
+++ b/thin/templates/thin/dictionary_index.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-<p>This is dictionary_index.html</p>
 <ul>
   {% for dict in dict_list %}
   <li>
@@ -13,6 +12,5 @@
   <li>No dictionaries</li>
   {% endfor %}
 </ul>
- {# TODO: make this work #}
-{# <a href="{% url 'dictionary_add' %}" class="btn btn-primary">Add</a> #}
+<a href="{% url 'dictionary_add' %}" class="btn btn-primary">Add</a>
 {% endblock %}
