--- a/thin/templates/thin/variety_index.html
+++ b/thin/templates/thin/variety_index.html
@@ -5,7 +5,7 @@
 <ul>
 {% for variety in varieties %}
    
-   <li> {{ variety.name }} : <a href="{% url 'variety_edit' variety.id %}">Edit </a></li>
+   <li><a href="{% url 'variety_detail' variety.id %}">{{ variety.name }}</a> : <a href="{% url 'variety_edit' variety.id %}">Edit </a></li>
 
 {% endfor %}
 <ul>
