--- a/thin/templates/thin/login.html
+++ b/thin/templates/thin/login.html
@@ -4,11 +4,12 @@
 
 {% block content %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
-<% csrf_token %>
+<form method="post">
+{% csrf_token %}
 
+{{form|bootstrap}}
 
-
+<input type="submit" value="Log In" class="btn btn-primary"/>
 </form>
 
 {% endblock %}
