--- a/thin/templates/thin/base-static-nav.html
+++ b/thin/templates/thin/base-static-nav.html
@@ -38,12 +38,18 @@
 	    </li>
 	  </ul>
 	  <ul class="nav navbar-nav navbar-right">
+	    {% if user.is_authenticated %}
 	    <li class="dropdown">
-	      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Username <span class="caret"></span></a>
+	      <a href="#" class="dropdown-toggle" data-toggle="dropdown"> {{ user.username }} <span class="caret"></span></a>
 	      <ul class="dropdown-menu dropdown-inverse">
-		<li><a href="#">Profile</a></li>
+		<li><a href="{% url 'logout' %}">Logout</a></li>
 	      </ul>
 	    </li>
+	    {% else %}
+	    <li>
+	      <a href="{% url 'login' %}">Login</a>
+	    </li>
+	    {% endif %} 
 	  </ul>
 	</div>
       </div>
