--- a/thin/templates/thin/base-static-nav.html
+++ b/thin/templates/thin/base-static-nav.html
@@ -56,6 +56,7 @@
     </nav>
     <div class="container">
       <h2><img class="logo img-rounded" src="http://placehold.it/200x100&text=Logo"/>Leaders in Surving the Web</h2>
+      {% if breadcrumb_menu %}
       <ol class="breadcrumb">
 	{% for item in breadcrumb_menu %}
 	<li>
@@ -63,6 +64,7 @@
 	</li>
 	{% endfor %}
       </ol>
+      {% endif %}
 
       {% if messages %}
       <div class="messages">
