Fixed a small inconsistency between dictionary detail and survey detail

--- a/thin/templates/thin/dictionary_index.html
+++ b/thin/templates/thin/dictionary_index.html
@@ -12,5 +12,5 @@
   <li>No dictionaries</li>
   {% endfor %}
 </ul>
-
+<a href="{% url 'project_add' %}" class='btn btn-success'>Add</a>
 {% endblock %}
