--- a/thin/templates/thin/survey_detail.html
+++ b/thin/templates/thin/survey_detail.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{{survey.name}} : <a href="{% url 'survey_edit' survey.id %}">Edit </a></li>
+
 <ul>
 {% for variety in varieties %}
 
