Glosses are adding, just need to clean up js still

--- a/thin/static/css/websurv.css
+++ b/thin/static/css/websurv.css
@@ -68,3 +68,9 @@ footer .breadcrumb {
 .copyright:after {
   content: "\00a9"
 }
+
+td > textarea {
+    height: 24px;
+    width: 300px;
+    resize: none;
+}
