glosses are added but still need to work on js

--- a/thin/templates/thin/project_add.html
+++ b/thin/templates/thin/project_add.html
@@ -8,7 +8,9 @@
 
     <form method="POST" action="">
       {% csrf_token %}
-      {{ form|bootstrap }}
+      {% for form in formset %}
+          {{form}}
+      {% endfor %}
       <input type="submit" value="Create Project" class='btn btn-primary'/>
     </form>
 
