glosses works for adding, I just need to do pretty js stuff to make everything good

--- a/thin/templates/thin/gloss_add.html
+++ b/thin/templates/thin/gloss_add.html
@@ -25,7 +25,7 @@
 	  <td>1</td>
 	  <td>{{ form.primary }}</td>
 	  <td>{{ form.secondary }}</td>
-	  <td>{{ form.pos }}</td>
+	  <td>{{ form.part_of_speech }}</td>
 	  <td>{{ form.field_tip }}</td>
 	  <td>{{ form.comment_tip }}</td>
 	</tr>
