Fixed project_add template to show form

--- a/thin/templates/thin/project_add.html
+++ b/thin/templates/thin/project_add.html
@@ -8,9 +8,7 @@
 
     <form method="POST" action="">
       {% csrf_token %}
-      {% for form in formset %}
-          {{form}}
-      {% endfor %}
+      {{ form|bootstrap }}
       <input type="submit" value="Create Project" class='btn btn-primary'/>
     </form>
 
