The keyboard is so pretty now

--- a/thin/templates/thin/variety_detail.html
+++ b/thin/templates/thin/variety_detail.html
@@ -11,12 +11,12 @@
   <li>{{ transcript.gloss }} | {{ transcript.ipa }}</li>
 {% endfor %}
 </ul>
-<input type="text"/>
+<input type="text" id="ipa_input"/>
 <table>
   <tbody>
   <tr>
   <td>
-  <div id="typeit_buttons" class="compact">
+  <div id="typeit_buttons" class="well well-sm">
     <div class="buttons btn-toolbar">
       <span class="btn-group btn-group-sm">
         <button name="a script" type="button" title="open back unrounded vowel (Ctrl+A)" class="btn btn-default">ɑ</button>
