--- a/thin/templates/thin/variety_detail.html
+++ b/thin/templates/thin/variety_detail.html
@@ -1,7 +1,6 @@
 {% extends 'thin/base.html' %}
 
 {% block content %}
-
 {{ variety.name }} : <a href="{% url 'variety_edit' variety.id %}">Edit </a>
 
 <ul>
@@ -9,7 +8,8 @@
   <li>{{ transcript.gloss }} | {{ transcript.ipa }}</li>
 {% endfor %}
 </ul>
-
+<input name="ipa_name9" type="text" id="ipa_input"/>
 {% include "thin/ipa_input.html" %}
+<input name="ipa_name19" type="text" id="ipa_input"/>
 
 {% endblock %}
