--- a/thin/templates/thin/variety_detail.html
+++ b/thin/templates/thin/variety_detail.html
@@ -10,5 +10,5 @@
 
 {% endfor %}
 </ul>
-
+<a href="{% url 'transcription_add' variety.id %}" class='btn btn-primary'>Add Transcriptions</a>
 {% endblock %}
