--- a/thin/templates/thin/variety_add.html
+++ b/thin/templates/thin/variety_add.html
@@ -1,2 +1,19 @@
-{# please overwrite this in a merge #}
-<p>variety_add.html</p>
+{% extends 'thin/base.html' %}
+
+{% load bootstrap %}
+
+{% block content %}
+
+<div class='row'>
+  <div class='col-md-4'>
+
+    <form method="POST" action="">
+      {% csrf_token %}
+      {{ form|bootstrap }}
+      <input type="submit" value="Save Changes" class='btn btn-primary'/>
+    </form>
+
+  </div>
+</div>
+
+{% endblock %}
