changing views and templates

--- a/thin/templates/thin/project_detail.html
+++ b/thin/templates/thin/project_detail.html
@@ -3,25 +3,41 @@
 {% load utils %}
 {% block content %}
 
-    <p>
-        {{ project.name }} :
-        {% url 'project_edit' project.id as project_edit_path %}
-        {% blink_to project_edit_path "Edit" "btn-warning btn-xs" %}
-    </p>
-    <div class="well well-sm">
-        Dictionaries in this project:
-        <ul>
-            {% for dictionary in dictionaries %}
-                <li>
-                    <a href="{{ dictionary.get_absolute_url }}">{{ dictionary.name }}</a>
-                    {% url 'dictionary_edit' dictionary.id as dictionary_edit_path %}
-                    {% blink_to dictionary_edit_path "Edit" "btn-warning btn-xs" %}
-                </li>
-	    {% empty %}
-	        <li>There are currently no dictionaries for this project.</li>
-            {% endfor %}
-        </ul>
-        {% url 'dictionary_add' project.id as dictionary_add_path %}
-        {% blink_to dictionary_add_path "Add" "btn-primary btn-xs" %}
-    </div>
+<p>
+    {{ project.name }} :
+    {% url 'project_edit' project.id as project_edit_path %}
+    {% blink_to project_edit_path "Edit" "btn-warning btn-xs" %}
+</p>
+<div class="well well-sm">
+    Dictionaries in this project:
+    <ul>
+        {% for dictionary in dictionaries %}
+        <li>
+            <a href="{{ dictionary.get_absolute_url }}">{{ dictionary.name }}</a>
+            {% url 'dictionary_edit' dictionary.id as dictionary_edit_path %}
+            {% blink_to dictionary_edit_path "Edit" "btn-warning btn-xs" %}
+        </li>
+        {% empty %}
+        <li>There are currently no dictionaries for this project.</li>
+        {% endfor %}
+    </ul>
+    {% url 'dictionary_add' project.id as dictionary_add_path %}
+    {% blink_to dictionary_add_path "Add" "btn-primary btn-xs" %}
+</div>
+<div class="well well-sm">
+    Surveys in this project:
+    <ul>
+        {% for survey in surveys %}
+        <li>
+            <a href="{{ survey.get_absolute_url }}">{{ survey.name }}</a>
+            {% url 'survey_edit' survey.id as survey_edit_path %}
+            {% blink_to survey_edit_path "Edit" "btn-warning btn-xs" %}
+        </li>
+        {% empty %}
+        <li>There are currently no surveys for this project.</li>
+        {% endfor %}
+    </ul>
+    {% url 'survey_add' project.id as survey_add_path %}
+    {% blink_to survey_add_path "Add" "btn-primary btn-xs" %}
+</div>
 {% endblock %}
