Finished toggleable IPA keyboard.

--- a/thin/templates/thin/ipa_input.html
+++ b/thin/templates/thin/ipa_input.html
@@ -6,7 +6,7 @@
     display: inline-block;
   }
 </style>
-<div id="ipa_buttons" class="panel panel-default" style="text-align: center">
+<div id="ipa_buttons" style="text-align: center; display: none;">
   <div class="btn-toolbar">
     <span class="btn-group btn-group-sm">
       <button name="a script" type="button" title="open back unrounded vowel (Ctrl+A)" class="btn btn-default">ɑ</button>
