--- a/thin/static/css/websurv.css
+++ b/thin/static/css/websurv.css
@@ -49,14 +49,16 @@ html, body {
 }
 
 #body {
-    padding-bottom: 35px;
+    padding-bottom: calc(35px + 280px);
 }
 
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    #height: 38px;
+}
+
+.footer {
     background-color: #222;
 }
 
