--- a/thin/templates/thin/base-static-nav.html
+++ b/thin/templates/thin/base-static-nav.html
@@ -66,11 +66,11 @@
       <ol class="breadcrumb">
         {% for item in breadcrumb_menu %}
           <li>
-          {% if request.path != item.get_absolute_url %}
-            <a href="{{ item.get_absolute_url }}" style="font-style: italic">{{ item.name }}</a>
-          {% else %}
-            <span style="font-style: italic; font-weight: bold">{{ item.name }}</span>
-          {% endif %}
+            {% if request.path != item.get_absolute_url %}
+              <a href="{{ item.get_absolute_url }}" style="font-style: italic">{{ item.name }}</a>
+            {% else %}
+              <span style="font-style: italic; font-weight: bold">{{ item.name }}</span>
+            {% endif %}
           </li>
         {% endfor %}
       </ol>
@@ -92,16 +92,18 @@
   </div>
   <footer>
     {% include "thin/ipa_input.html" %}
-    <div class="container text-muted">
-      <ul class="pull-left breadcrumb breadcrumb-bar">
-        <li><a href="#">Home</a></li>
-        <li><a href="{% url "project_index" %}">Project List</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-      <ul class="pull-right breadcrumb">
-        <li><a id="ipa-toggle" href="#">Click to show IPA Keyboard</a></li>
-        <li><span class="copyright">Software Studio </span></li>
-      </ul>
+    <div class="footer">
+      <div class="container text-muted">
+        <ul class="pull-left breadcrumb breadcrumb-bar">
+          <li><a href="#">Home</a></li>
+          <li><a href="{% url "project_index" %}">Project List</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+        <ul class="pull-right breadcrumb">
+          <li><a id="ipa-toggle" href="#">Click to toggle IPA Keyboard</a></li>
+          <li><span class="copyright">Software Studio </span></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </div>
