--- a/thin/templates/thin/base.html
+++ b/thin/templates/thin/base.html
@@ -1,1 +1,114 @@
-base-static-nav.html
+{% load utils %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Websurv</title>
+{#  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>#}
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/websurv.css"/>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+
+{% url 'home' as home_path %}
+<div id="everything">
+  <nav class="navbar navbar-static-top navbar-inverse" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+{#        <a class="navbar-brand" href="{{ home_path }}"><img class="navbar-logo" src="http://placehold.it/80x50&text=Logo"/></a>#}
+        <a class="navbar-brand" href="{{ home_path }}">WebSurv</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="dropdown{% if request.path == project.get_absolute_url %} active{% endif %}">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
+            <ul class="dropdown-menu dropdown-inverse">
+              {% for project in projects %}
+                <li {% if request.path == project.get_absolute_url %}class="active"{% endif %}>
+                  <a href="{{ project.get_absolute_url }}">{{ project.name }}</a>
+                </li>
+              {% endfor %}
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {% if user.is_authenticated %}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.username.title }} <span class="caret"></span></a>
+              <ul class="dropdown-menu dropdown-inverse">
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+              </ul>
+            </li>
+          {% else %}
+            <li>
+              <a href="{% url 'login' %}">Login</a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div id="body" class="container">
+    <h2><img class="logo img-rounded" src="{{ STATIC_URL }}media/WebSurvLogo.png" width="200px"/>Leaders in Surving the Web</h2>
+{#    <h2><img class="logo img-rounded" src="http://placehold.it/200x100&text=Logo"/>Leaders in Surving the Web</h2>#}
+
+
+{#    {% if breadcrumb_menu %}#}
+      <ol class="breadcrumb">
+      <li><a href="{{ home_path }}" style="font-style: italic">WebSurv</a></li>
+        {% for item in breadcrumb_menu %}
+          <li>
+            {% if request.path != item.get_absolute_url %}
+              <a href="{{ item.get_absolute_url }}" style="font-style: italic">{{ item }}</a>
+            {% else %}
+              <span style="font-style: italic; font-weight: bold">{{ item }}:</span>
+              {% if request.path != "/" %}
+                <a style="font-style: italic" href="edit">Edit</a>
+              {% endif %}
+            {% endif %}
+          </li>
+        {% endfor %}
+      </ol>
+{#    {% endif %}#}
+
+    {% if messages %}
+      <div class="messages">
+        {% for message in messages %}
+          <div {% if message.tags %} class="alert alert-{{ message.tags }} alert-dismissable" {% endif %}>
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    {% block content %}
+    {% endblock %}
+  </div>
+  <footer>
+    {% include "thin/ipa_input.html" %}
+    <div class="footer">
+      <div class="container text-muted">
+        <ul class="pull-left breadcrumb breadcrumb-bar">
+          <li><a href="#">Home</a></li>
+          <li><a href="{% url "project_index" %}">Project List</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+        <ul class="pull-right breadcrumb breadcrumb-bar">
+          <li><a id="ipa-toggle" href="#">Click to toggle IPA Keyboard</a></li>
+          <li><span class="copyright">Software Studio </span></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</div>
+</body>
+</html>
