--- a/thin/templates/thin/dictionary_detail.html
+++ b/thin/templates/thin/dictionary_detail.html
@@ -1,68 +1,38 @@
 {# Dictionary Detail #}
 {% extends "thin/base.html" %}
+{% load utils %}
 
 {% block content %}
-
-
-<span><strong>Dictionary Name:</strong>
-    {{dictionary.name}} : <a href="{% url 'dictionary_edit' dictionary.id %}">Edit</a>
-</span>
-
-
-<hr>
-
-<h4><strong>Surveys</strong></h4>
-
-<div>
-    {% if surveys %}
-        <ul>
-        {% for survey in surveys %}
-            <li>
-                <a href="{% url 'survey_detail' survey.id %}">{{ survey.name }}</a> :
-                <a href="{% url 'survey_edit' survey.id %}">Edit</a>
-            </li>
-        {% endfor %}
-        </ul>
-        <a href = "{% url 'survey_add' dictionary.id %}" class="btn btn-primary">Add Survey</a>
-    {% else %}
-    <ul>
-        <li>There are no surveys</li>
-        <span>Would you like to <a href="{% url 'survey_add' dictionary.id %}">Add a New Survey</a>?</span>
-    </ul>
-    {% endif %}
+  <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Glosses</h3>
+    {% url 'gloss_add' dictionary.id as gloss_add_path %}
+    {% blink_to gloss_add_path "Add New Glosses" "btn-primary btn-xs pull-right" %}
+  </div>
+  <table class="table table-striped" id='table'>
+    <thead>
+    <tr>
+      <th>Primary</th>
+      <th>Secondary</th>
+      <th>POS</th>
+      <th>Field Tip</th>
+      <th>Comment Tip</th>
+      <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for gloss in glosses %}
+      <tr>
+        <td>{{ gloss.primary }}</td>
+        <td>{{ gloss.secondary }}</td>
+        <td>{{ gloss.part_of_speech }}</td>
+        <td>{{ gloss.field_tip }}</td>
+        <td>{{ gloss.comment_tip }}</td>
+        {% url 'gloss_edit' gloss.id as gloss_edit_path %}
+        <td>{% link_to gloss_edit_path "Edit" "pull-right" %}</td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
 </div>
-
-<hr>
-
-<h4><strong>Glosses</strong></h4>
-
-<table class="table table-striped" id='table'>
-        <thead>
-        <tr>
-            <th>Primary</th>
-            <th>Secondary</th>
-            <th>POS</th>
-            <th>Field Tip</th>
-            <th>Comment Tip</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for gloss in glosses %}
-        <tr>
-            <td>{{ gloss.primary }}</td>
-            <td>{{ gloss.secondary }}</td>
-            <td>{{ gloss.part_of_speech }}</td>
-            <td>{{ gloss.field_tip }}</td>
-            <td>{{ gloss.comment_tip }}</td>
-            <td><a href="{% url 'gloss_edit' gloss.id %}">Edit</a></td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <td>
-                <a href="{% url 'gloss_add' dictionary.id %}" class="btn btn-primary">Add New Glosses</a>
-            </td>
-        </tr>
-        </tbody>
-</table>
-
 {% endblock %}
